goal table user name word break alignment bug fixed

--- a/public/assets/css/assign_goals.css
+++ b/public/assets/css/assign_goals.css
@@ -117,7 +117,7 @@ table.dataTable tr:first-child th:nth-child(2) {
     top: -0.5rem;
     float: left;
     color: #808080;
-    min-width: 4rem;
+
     margin-left: 0;
     margin-right: 1rem;
     text-align: left;
